src/E/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement statement_list
Rule 3     statement_list -> statement
Rule 4     statement -> statement_assign
Rule 5     statement -> statement_escrever
Rule 6     statement -> statement_if
Rule 7     statement -> statement_while
Rule 8     statement -> statement_def
Rule 9     statement -> statement_return
Rule 10    statement_assign -> ID ASSIGN expression SEMICOLON
Rule 11    statement_escrever -> ESCREVER LPAREN expression RPAREN SEMICOLON
Rule 12    statement_if -> IF expression COLON statement_list elif_blocks else_block
Rule 13    elif_blocks -> elif_block elif_blocks
Rule 14    elif_blocks -> empty
Rule 15    elif_block -> ELIF expression COLON statement_list
Rule 16    else_block -> ELSE COLON statement_list
Rule 17    else_block -> empty
Rule 18    statement_while -> WHILE expression COLON statement_list
Rule 19    statement_def -> DEF ID LPAREN params RPAREN COLON statement_list RETURN expression SEMICOLON END
Rule 20    params -> ID
Rule 21    params -> params COMMA ID
Rule 22    params -> empty
Rule 23    statement_return -> RETURN expression SEMICOLON
Rule 24    expression -> expression PLUS expression
Rule 25    expression -> expression MINUS expression
Rule 26    expression -> expression TIMES expression
Rule 27    expression -> expression DIVIDE expression
Rule 28    expression -> expression GT expression
Rule 29    expression -> expression LT expression
Rule 30    expression -> expression GE expression
Rule 31    expression -> expression LE expression
Rule 32    expression -> expression EQ expression
Rule 33    expression -> expression NE expression
Rule 34    expression -> NUMBER
Rule 35    expression -> STRING
Rule 36    expression -> ID
Rule 37    expression -> expression CONCAT expression
Rule 38    expression -> ID LPAREN arguments RPAREN
Rule 39    arguments -> expression
Rule 40    arguments -> arguments COMMA expression
Rule 41    arguments -> empty
Rule 42    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 10
COLON                : 12 15 16 18 19
COMMA                : 21 40
CONCAT               : 37
DEF                  : 19
DIVIDE               : 27
ELIF                 : 15
ELSE                 : 16
END                  : 19
EQ                   : 32
ESCREVER             : 11
GE                   : 30
GT                   : 28
ID                   : 10 19 20 21 36 38
IF                   : 12
LE                   : 31
LPAREN               : 11 19 38
LT                   : 29
MINUS                : 25
NE                   : 33
NUMBER               : 34
PLUS                 : 24
RETURN               : 19 23
RPAREN               : 11 19 38
SEMICOLON            : 10 11 19 23
STRING               : 35
TIMES                : 26
WHILE                : 18
error                : 

Nonterminals, with rules where they appear

arguments            : 38 40
elif_block           : 13
elif_blocks          : 12 13
else_block           : 12
empty                : 14 17 22 41
expression           : 10 11 12 15 18 19 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 37 37 39 40
params               : 19 21
program              : 0
statement            : 2 3
statement_assign     : 4
statement_def        : 8
statement_escrever   : 5
statement_if         : 6
statement_list       : 1 2 12 15 16 18 19
statement_return     : 9
statement_while      : 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . statement_assign
    (5) statement -> . statement_escrever
    (6) statement -> . statement_if
    (7) statement -> . statement_while
    (8) statement -> . statement_def
    (9) statement -> . statement_return
    (10) statement_assign -> . ID ASSIGN expression SEMICOLON
    (11) statement_escrever -> . ESCREVER LPAREN expression RPAREN SEMICOLON
    (12) statement_if -> . IF expression COLON statement_list elif_blocks else_block
    (18) statement_while -> . WHILE expression COLON statement_list
    (19) statement_def -> . DEF ID LPAREN params RPAREN COLON statement_list RETURN expression SEMICOLON END
    (23) statement_return -> . RETURN expression SEMICOLON

    ID              shift and go to state 10
    ESCREVER        shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    DEF             shift and go to state 14
    RETURN          shift and go to state 15

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    statement_assign               shift and go to state 4
    statement_escrever             shift and go to state 5
    statement_if                   shift and go to state 6
    statement_while                shift and go to state 7
    statement_def                  shift and go to state 8
    statement_return               shift and go to state 9

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .

    $end            reduce using rule 1 (program -> statement_list .)


state 3

    (2) statement_list -> statement . statement_list
    (3) statement_list -> statement .
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . statement_assign
    (5) statement -> . statement_escrever
    (6) statement -> . statement_if
    (7) statement -> . statement_while
    (8) statement -> . statement_def
    (9) statement -> . statement_return
    (10) statement_assign -> . ID ASSIGN expression SEMICOLON
    (11) statement_escrever -> . ESCREVER LPAREN expression RPAREN SEMICOLON
    (12) statement_if -> . IF expression COLON statement_list elif_blocks else_block
    (18) statement_while -> . WHILE expression COLON statement_list
    (19) statement_def -> . DEF ID LPAREN params RPAREN COLON statement_list RETURN expression SEMICOLON END
    (23) statement_return -> . RETURN expression SEMICOLON

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for ESCREVER resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
    $end            reduce using rule 3 (statement_list -> statement .)
    ELIF            reduce using rule 3 (statement_list -> statement .)
    ELSE            reduce using rule 3 (statement_list -> statement .)
    ID              shift and go to state 10
    ESCREVER        shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    DEF             shift and go to state 14
    RETURN          shift and go to state 15

  ! ID              [ reduce using rule 3 (statement_list -> statement .) ]
  ! ESCREVER        [ reduce using rule 3 (statement_list -> statement .) ]
  ! IF              [ reduce using rule 3 (statement_list -> statement .) ]
  ! WHILE           [ reduce using rule 3 (statement_list -> statement .) ]
  ! DEF             [ reduce using rule 3 (statement_list -> statement .) ]
  ! RETURN          [ reduce using rule 3 (statement_list -> statement .) ]

    statement                      shift and go to state 3
    statement_list                 shift and go to state 16
    statement_assign               shift and go to state 4
    statement_escrever             shift and go to state 5
    statement_if                   shift and go to state 6
    statement_while                shift and go to state 7
    statement_def                  shift and go to state 8
    statement_return               shift and go to state 9

state 4

    (4) statement -> statement_assign .

    ID              reduce using rule 4 (statement -> statement_assign .)
    ESCREVER        reduce using rule 4 (statement -> statement_assign .)
    IF              reduce using rule 4 (statement -> statement_assign .)
    WHILE           reduce using rule 4 (statement -> statement_assign .)
    DEF             reduce using rule 4 (statement -> statement_assign .)
    RETURN          reduce using rule 4 (statement -> statement_assign .)
    $end            reduce using rule 4 (statement -> statement_assign .)
    ELIF            reduce using rule 4 (statement -> statement_assign .)
    ELSE            reduce using rule 4 (statement -> statement_assign .)


state 5

    (5) statement -> statement_escrever .

    ID              reduce using rule 5 (statement -> statement_escrever .)
    ESCREVER        reduce using rule 5 (statement -> statement_escrever .)
    IF              reduce using rule 5 (statement -> statement_escrever .)
    WHILE           reduce using rule 5 (statement -> statement_escrever .)
    DEF             reduce using rule 5 (statement -> statement_escrever .)
    RETURN          reduce using rule 5 (statement -> statement_escrever .)
    $end            reduce using rule 5 (statement -> statement_escrever .)
    ELIF            reduce using rule 5 (statement -> statement_escrever .)
    ELSE            reduce using rule 5 (statement -> statement_escrever .)


state 6

    (6) statement -> statement_if .

    ID              reduce using rule 6 (statement -> statement_if .)
    ESCREVER        reduce using rule 6 (statement -> statement_if .)
    IF              reduce using rule 6 (statement -> statement_if .)
    WHILE           reduce using rule 6 (statement -> statement_if .)
    DEF             reduce using rule 6 (statement -> statement_if .)
    RETURN          reduce using rule 6 (statement -> statement_if .)
    $end            reduce using rule 6 (statement -> statement_if .)
    ELIF            reduce using rule 6 (statement -> statement_if .)
    ELSE            reduce using rule 6 (statement -> statement_if .)


state 7

    (7) statement -> statement_while .

    ID              reduce using rule 7 (statement -> statement_while .)
    ESCREVER        reduce using rule 7 (statement -> statement_while .)
    IF              reduce using rule 7 (statement -> statement_while .)
    WHILE           reduce using rule 7 (statement -> statement_while .)
    DEF             reduce using rule 7 (statement -> statement_while .)
    RETURN          reduce using rule 7 (statement -> statement_while .)
    $end            reduce using rule 7 (statement -> statement_while .)
    ELIF            reduce using rule 7 (statement -> statement_while .)
    ELSE            reduce using rule 7 (statement -> statement_while .)


state 8

    (8) statement -> statement_def .

    ID              reduce using rule 8 (statement -> statement_def .)
    ESCREVER        reduce using rule 8 (statement -> statement_def .)
    IF              reduce using rule 8 (statement -> statement_def .)
    WHILE           reduce using rule 8 (statement -> statement_def .)
    DEF             reduce using rule 8 (statement -> statement_def .)
    RETURN          reduce using rule 8 (statement -> statement_def .)
    $end            reduce using rule 8 (statement -> statement_def .)
    ELIF            reduce using rule 8 (statement -> statement_def .)
    ELSE            reduce using rule 8 (statement -> statement_def .)


state 9

    (9) statement -> statement_return .

    ID              reduce using rule 9 (statement -> statement_return .)
    ESCREVER        reduce using rule 9 (statement -> statement_return .)
    IF              reduce using rule 9 (statement -> statement_return .)
    WHILE           reduce using rule 9 (statement -> statement_return .)
    DEF             reduce using rule 9 (statement -> statement_return .)
    RETURN          reduce using rule 9 (statement -> statement_return .)
    $end            reduce using rule 9 (statement -> statement_return .)
    ELIF            reduce using rule 9 (statement -> statement_return .)
    ELSE            reduce using rule 9 (statement -> statement_return .)


state 10

    (10) statement_assign -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 17


state 11

    (11) statement_escrever -> ESCREVER . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 18


state 12

    (12) statement_if -> IF . expression COLON statement_list elif_blocks else_block
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression GT expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression LE expression
    (32) expression -> . expression EQ expression
    (33) expression -> . expression NE expression
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . expression CONCAT expression
    (38) expression -> . ID LPAREN arguments RPAREN

    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 22

    expression                     shift and go to state 19

state 13

    (18) statement_while -> WHILE . expression COLON statement_list
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression GT expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression LE expression
    (32) expression -> . expression EQ expression
    (33) expression -> . expression NE expression
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . expression CONCAT expression
    (38) expression -> . ID LPAREN arguments RPAREN

    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 22

    expression                     shift and go to state 23

state 14

    (19) statement_def -> DEF . ID LPAREN params RPAREN COLON statement_list RETURN expression SEMICOLON END

    ID              shift and go to state 24


state 15

    (23) statement_return -> RETURN . expression SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression GT expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression LE expression
    (32) expression -> . expression EQ expression
    (33) expression -> . expression NE expression
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . expression CONCAT expression
    (38) expression -> . ID LPAREN arguments RPAREN

    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 22

    expression                     shift and go to state 25

state 16

    (2) statement_list -> statement statement_list .

    $end            reduce using rule 2 (statement_list -> statement statement_list .)
    ELIF            reduce using rule 2 (statement_list -> statement statement_list .)
    ELSE            reduce using rule 2 (statement_list -> statement statement_list .)
    ID              reduce using rule 2 (statement_list -> statement statement_list .)
    ESCREVER        reduce using rule 2 (statement_list -> statement statement_list .)
    IF              reduce using rule 2 (statement_list -> statement statement_list .)
    WHILE           reduce using rule 2 (statement_list -> statement statement_list .)
    DEF             reduce using rule 2 (statement_list -> statement statement_list .)
    RETURN          reduce using rule 2 (statement_list -> statement statement_list .)


state 17

    (10) statement_assign -> ID ASSIGN . expression SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression GT expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression LE expression
    (32) expression -> . expression EQ expression
    (33) expression -> . expression NE expression
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . expression CONCAT expression
    (38) expression -> . ID LPAREN arguments RPAREN

    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 22

    expression                     shift and go to state 26

state 18

    (11) statement_escrever -> ESCREVER LPAREN . expression RPAREN SEMICOLON
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression GT expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression LE expression
    (32) expression -> . expression EQ expression
    (33) expression -> . expression NE expression
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . expression CONCAT expression
    (38) expression -> . ID LPAREN arguments RPAREN

    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 22

    expression                     shift and go to state 27

state 19

    (12) statement_if -> IF expression . COLON statement_list elif_blocks else_block
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . GT expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GE expression
    (31) expression -> expression . LE expression
    (32) expression -> expression . EQ expression
    (33) expression -> expression . NE expression
    (37) expression -> expression . CONCAT expression

    COLON           shift and go to state 28
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GE              shift and go to state 35
    LE              shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    CONCAT          shift and go to state 39


state 20

    (34) expression -> NUMBER .

    COLON           reduce using rule 34 (expression -> NUMBER .)
    PLUS            reduce using rule 34 (expression -> NUMBER .)
    MINUS           reduce using rule 34 (expression -> NUMBER .)
    TIMES           reduce using rule 34 (expression -> NUMBER .)
    DIVIDE          reduce using rule 34 (expression -> NUMBER .)
    GT              reduce using rule 34 (expression -> NUMBER .)
    LT              reduce using rule 34 (expression -> NUMBER .)
    GE              reduce using rule 34 (expression -> NUMBER .)
    LE              reduce using rule 34 (expression -> NUMBER .)
    EQ              reduce using rule 34 (expression -> NUMBER .)
    NE              reduce using rule 34 (expression -> NUMBER .)
    CONCAT          reduce using rule 34 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 34 (expression -> NUMBER .)
    RPAREN          reduce using rule 34 (expression -> NUMBER .)
    COMMA           reduce using rule 34 (expression -> NUMBER .)


state 21

    (35) expression -> STRING .

    COLON           reduce using rule 35 (expression -> STRING .)
    PLUS            reduce using rule 35 (expression -> STRING .)
    MINUS           reduce using rule 35 (expression -> STRING .)
    TIMES           reduce using rule 35 (expression -> STRING .)
    DIVIDE          reduce using rule 35 (expression -> STRING .)
    GT              reduce using rule 35 (expression -> STRING .)
    LT              reduce using rule 35 (expression -> STRING .)
    GE              reduce using rule 35 (expression -> STRING .)
    LE              reduce using rule 35 (expression -> STRING .)
    EQ              reduce using rule 35 (expression -> STRING .)
    NE              reduce using rule 35 (expression -> STRING .)
    CONCAT          reduce using rule 35 (expression -> STRING .)
    SEMICOLON       reduce using rule 35 (expression -> STRING .)
    RPAREN          reduce using rule 35 (expression -> STRING .)
    COMMA           reduce using rule 35 (expression -> STRING .)


state 22

    (36) expression -> ID .
    (38) expression -> ID . LPAREN arguments RPAREN

    COLON           reduce using rule 36 (expression -> ID .)
    PLUS            reduce using rule 36 (expression -> ID .)
    MINUS           reduce using rule 36 (expression -> ID .)
    TIMES           reduce using rule 36 (expression -> ID .)
    DIVIDE          reduce using rule 36 (expression -> ID .)
    GT              reduce using rule 36 (expression -> ID .)
    LT              reduce using rule 36 (expression -> ID .)
    GE              reduce using rule 36 (expression -> ID .)
    LE              reduce using rule 36 (expression -> ID .)
    EQ              reduce using rule 36 (expression -> ID .)
    NE              reduce using rule 36 (expression -> ID .)
    CONCAT          reduce using rule 36 (expression -> ID .)
    SEMICOLON       reduce using rule 36 (expression -> ID .)
    RPAREN          reduce using rule 36 (expression -> ID .)
    COMMA           reduce using rule 36 (expression -> ID .)
    LPAREN          shift and go to state 40


state 23

    (18) statement_while -> WHILE expression . COLON statement_list
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . GT expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GE expression
    (31) expression -> expression . LE expression
    (32) expression -> expression . EQ expression
    (33) expression -> expression . NE expression
    (37) expression -> expression . CONCAT expression

    COLON           shift and go to state 41
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GE              shift and go to state 35
    LE              shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    CONCAT          shift and go to state 39


state 24

    (19) statement_def -> DEF ID . LPAREN params RPAREN COLON statement_list RETURN expression SEMICOLON END

    LPAREN          shift and go to state 42


state 25

    (23) statement_return -> RETURN expression . SEMICOLON
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . GT expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GE expression
    (31) expression -> expression . LE expression
    (32) expression -> expression . EQ expression
    (33) expression -> expression . NE expression
    (37) expression -> expression . CONCAT expression

    SEMICOLON       shift and go to state 43
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GE              shift and go to state 35
    LE              shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    CONCAT          shift and go to state 39


state 26

    (10) statement_assign -> ID ASSIGN expression . SEMICOLON
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . GT expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GE expression
    (31) expression -> expression . LE expression
    (32) expression -> expression . EQ expression
    (33) expression -> expression . NE expression
    (37) expression -> expression . CONCAT expression

    SEMICOLON       shift and go to state 44
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GE              shift and go to state 35
    LE              shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    CONCAT          shift and go to state 39


state 27

    (11) statement_escrever -> ESCREVER LPAREN expression . RPAREN SEMICOLON
    (24) expression -> expression . PLUS expression
    (25) expression -> expression . MINUS expression
    (26) expression -> expression . TIMES expression
    (27) expression -> expression . DIVIDE expression
    (28) expression -> expression . GT expression
    (29) expression -> expression . LT expression
    (30) expression -> expression . GE expression
    (31) expression -> expression . LE expression
    (32) expression -> expression . EQ expression
    (33) expression -> expression . NE expression
    (37) expression -> expression . CONCAT expression

    RPAREN          shift and go to state 45
    PLUS            shift and go to state 29
    MINUS           shift and go to state 30
    TIMES           shift and go to state 31
    DIVIDE          shift and go to state 32
    GT              shift and go to state 33
    LT              shift and go to state 34
    GE              shift and go to state 35
    LE              shift and go to state 36
    EQ              shift and go to state 37
    NE              shift and go to state 38
    CONCAT          shift and go to state 39


state 28

    (12) statement_if -> IF expression COLON . statement_list elif_blocks else_block
    (2) statement_list -> . statement statement_list
    (3) statement_list -> . statement
    (4) statement -> . statement_assign
    (5) statement -> . statement_escrever
    (6) statement -> . statement_if
    (7) statement -> . statement_while
    (8) statement -> . statement_def
    (9) statement -> . statement_return
    (10) statement_assign -> . ID ASSIGN expression SEMICOLON
    (11) statement_escrever -> . ESCREVER LPAREN expression RPAREN SEMICOLON
    (12) statement_if -> . IF expression COLON statement_list elif_blocks else_block
    (18) statement_while -> . WHILE expression COLON statement_list
    (19) statement_def -> . DEF ID LPAREN params RPAREN COLON statement_list RETURN expression SEMICOLON END
    (23) statement_return -> . RETURN expression SEMICOLON

    ID              shift and go to state 10
    ESCREVER        shift and go to state 11
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    DEF             shift and go to state 14
    RETURN          shift and go to state 15

    statement_list                 shift and go to state 46
    statement                      shift and go to state 3
    statement_assign               shift and go to state 4
    statement_escrever             shift and go to state 5
    statement_if                   shift and go to state 6
    statement_while                shift and go to state 7
    statement_def                  shift and go to state 8
    statement_return               shift and go to state 9

state 29

    (24) expression -> expression PLUS . expression
    (24) expression -> . expression PLUS expression
    (25) expression -> . expression MINUS expression
    (26) expression -> . expression TIMES expression
    (27) expression -> . expression DIVIDE expression
    (28) expression -> . expression GT expression
    (29) expression -> . expression LT expression
    (30) expression -> . expression GE expression
    (31) expression -> . expression LE expression
    (32) expression -> . expression EQ expression
    (33) expression -> . expression NE expression
    (34) expression -> . NUMBER
    (35) expression -> . STRING
    (36) expression -> . ID
    (37) expression -> . expression CONCAT expression
    (38) expression -> . ID LPAREN arguments RPAREN

    NUMBER          shift and go to state 20
    STRING          shift and go to state 21
    ID              shift and go to state 22

    expression                     shift and go to state 47

state 30
